--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py35,py36,py37,py38
+envlist = py35,py36,py37
 skipsdist = True
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-setenv = PYTHONPATH = {toxinidir}/allegedb{:}{toxinidir}/LiSE
+setenv = PYTHONPATH = {toxinidir}/allegedb{:}{toxinidir}/LiSE{:}{toxinidir}/ELiDE
 deps = 
     astunparse>=1.5.0
 	blinker
-	msgpack>=0.5.6
+	kivy>=1.10.0,<2
+	msgpack==1.0.0
 	networkx>=1.9<=2.4
 	numpy
 	pygments
