--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,26 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py35,py36,py37
+envlist = py36,py37,py38,py39
 skipsdist = True
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
+depends = cython
 setenv = PYTHONPATH = {toxinidir}/allegedb{:}{toxinidir}/LiSE{:}{toxinidir}/ELiDE
+passenv = DISPLAY
 deps = 
-    astunparse>=1.5.0
+    astunparse==1.5.0
 	blinker
-	kivy>=1.10.0,<2
 	msgpack==1.0.0
-	networkx>=1.9<=2.4
+	kivy
+	networkx==2.4
 	numpy
 	pygments
 	pytest
 	sqlalchemy
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    pytest
+    python3 -m pytest -v -s
+
+[cython]
+deps = Cython
