Improve tox tests
You can test just LiSE now, if you prefer.

Make sure to ignore .tox wherever it shows up

--- a/LiSE/tox.ini
+++ b/LiSE/tox.ini
@@ -1,18 +1,17 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
 envlist = py36,py37,py38,py39
-skipsdist = true
-requires =
-	setuptools >= 51.0.0
-	Cython
+requires = setuptools >= 51.0.0
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-passenv = DISPLAY
 deps =
+    astunparse
+    msgpack
+    blinker
+    networkx
 	pytest
-	LiSE/
-	ELiDE/
 commands =
     # NOTE: you can run any command line tool here - not just tests
     python3 -m pytest
+
