--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -1,12 +1,37 @@
 [project]
-
+name = "LiSE"
+version = "0.13.0"
+authors = [
+	{ name="Zachary Spector", email="public@zacharyspector.com" },
+]
+description = "Life Simulator Engine"
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.7"
+classifiers = [
+	"Programming Language :: Python :: 3",
+	"License :: OSI Approved :: AGPL License",
+	"Operating System :: OS Independent",
+	"Topic :: Software Development :: Libraries",
+	"Development Status :: 3 - Alpha"
+]
 dependencies = [
 	"astunparse>=1.6.3,<2",
 	"blinker>=1.4,<2",
 	"lz4>=3.1.3",
 	"msgpack>=1.0.0",
-	"networkx>=2.4,<2.6"
+	"networkx>=2.4,<2.8"
 ]
 
+[project.urls]
+"Homepage" = "https://tactical-metaphysics.github.io/LiSE/"
+"Bug Tracker" = "https://github.com/Tactical-Metaphysics/LiSE/issues"
+
+
 [project.optional-dependencies]
-FAST = ["numpy>=1.19.5,<2"]
+fast-proxy = ["numpy>=1.19.5,<2"]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
