--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
 	"Programming Language :: Python :: 3",
 	"License :: OSI Approved :: AGPL License",
 	"Operating System :: OS Independent",
-	"Development Status :: 3 - Alpha"
+	"Development Status :: 2 - Pre-Alpha"
 ]
 dependencies = [
 	"LiSE>=0.13,<0.14",
