--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -10,7 +10,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
 	"Programming Language :: Python :: 3",
-	"License :: OSI Approved :: AGPL License",
+	"License :: OSI Approved :: GNU Affero General Public License v3",
 	"Operating System :: OS Independent",
 	"Development Status :: 2 - Pre-Alpha"
 ]
