--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
 
 [project.optional-dependencies]
 fast-proxy = ["numpy>=1.19.5,<2"]
+server = ["CherryPy>=18.6.1"]
 
 [tool.pytest.ini_options]
 markers = [
