--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
 [project.optional-dependencies]
 fast-proxy = ["numpy>=1.19.5,<2"]
 server = ["CherryPy>=18.6.1"]
+many-sql = ["sqlalchemy>=1.3,<2"]
 
 [tool.pytest.ini_options]
 markers = [
