--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
 	"blinker>=1.4,<2",
 	"lz4>=3.1.3",
 	"msgpack>=1.0.0",
-	"networkx>=2.4,<2.8"
+	"networkx>=2.4,<2.8",
+	"cached_property>=1.5.2"
 ]
 
 [project.urls]
