Make lz4 into an optional dependency as well
Honestly, I'm not sure what good it does to have the slow-proxy option, but it's there.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = py37,py38,py39,py310
 skipsdist = true
 requires =
 	setuptools >= 51.0.0
+	numpy>=1.19.5
+	lz4>=3.1.3
 	Cython
 
 [testenv]
