--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
 dependencies = [
 	"astunparse>=1.6.3,<2",
 	"blinker>=1.4,<2",
-	"lz4>=3.1.3",
 	"msgpack>=1.0.0",
 	"networkx>=2.4,<2.8",
 	"cached_property>=1.5.2"
@@ -30,8 +29,9 @@ dependencies = [
 
 
 [project.optional-dependencies]
-fast-proxy = ["numpy>=1.19.5,<2"]
-server = ["CherryPy>=18.6.1"]
+proxy = ["lz4>=3.1.3", "numpy>=1.19.5,<2"]
+slow-proxy = ["lz4>=3.1.3"]
+server = ["CherryPy>=18.6.1", "lz4>=3.1.3", "numpy>=1.19.5,<2"]
 many-sql = ["sqlalchemy>=1.3,<2"]
 
 [tool.pytest.ini_options]
