--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
 	"blinker>=1.4,<2",
 	"msgpack>=1.0.0",
 	"networkx>=2.4,<2.8",
-	"cached_property>=1.5.2"
+	"cached_property>=1.5.2",
+	"sqlalchemy>=1.4,<3"
 ]
 
 [project.urls]
@@ -39,7 +40,6 @@ dependencies = [
 proxy = ["lz4>=3.1.3", "numpy>=1.19.5,<2"]
 slow-proxy = ["lz4>=3.1.3"]
 server = ["CherryPy>=18.6.1", "lz4>=3.1.3", "numpy>=1.19.5,<2"]
-many-sql = ["sqlalchemy>=1.3,<2"]
 
 [tool.pytest.ini_options]
 markers = [
