--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -1,6 +1,13 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+include-package-data=true
+
 [project]
 name = "LiSE"
-version = "0.13.2"
+version = "0.13.3"
 authors = [
 	{ name="Zachary Spector", email="public@zacharyspector.com" },
 ]
