--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
 	"msgpack>=1.0.0",
 	"networkx>=2.4,<2.8",
 	"cached_property>=1.5.2",
-	"sqlalchemy>=1.4,<3"
+	"sqlalchemy>=1.4,<3",
+	"numpy>=1.19.5,<2"
 ]
 
 [project.urls]
@@ -37,9 +38,8 @@ dependencies = [
 
 
 [project.optional-dependencies]
-proxy = ["lz4>=3.1.3", "numpy>=1.19.5,<2"]
-slow-proxy = ["lz4>=3.1.3"]
-server = ["CherryPy>=18.6.1", "lz4>=3.1.3", "numpy>=1.19.5,<2"]
+proxy = ["lz4>=3.1.3"]
+server = ["CherryPy>=18.6.1", "lz4>=3.1.3"]
 
 [tool.pytest.ini_options]
 markers = [
