--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 	{ name="Zachary Spector", email="public@zacharyspector.com" },
 ]
 description = "Extensible Life Simulator Engine Development Environment"
-readme = "README.md"
+readme = "../README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
