--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 ]
 description = "Extensible Life Simulator Engine Development Environment"
 readme = "../README.md"
-license = { file = "LICENSE" }
+license = { file = "../LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
 	"Programming Language :: Python :: 3",
