--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -33,8 +33,8 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://tactical-metaphysics.github.io/LiSE/"
-"Bug Tracker" = "https://github.com/Tactical-Metaphysics/LiSE/issues"
+"Homepage" = "https://tacticalmetaphysics.github.io/LiSE/"
+"Bug Tracker" = "https://github.com/TacticalMetaphysics/LiSE/issues"
 
 
 [project.optional-dependencies]
