--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -7,13 +7,13 @@ include-package-data=true
 
 [project]
 name = "ELiDE"
-version = "0.13.3"
+version = "0.14.0"
 authors = [
 	{ name="Zachary Spector", email="public@zacharyspector.com" },
 ]
 description = "Extensible Life Simulator Engine Development Environment"
-readme = "../README.md"
-license = { file = "../LICENSE" }
+readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
 	"Programming Language :: Python :: 3",
@@ -22,7 +22,7 @@ classifiers = [
 	"Development Status :: 2 - Pre-Alpha"
 ]
 dependencies = [
-	"LiSE[proxy]>=0.13.2,<0.14",
+	"LiSE[proxy]==0.14.0",
 	"kivy>=2.0.0,<3",
 	"pygments>=2.7.4"
 ]
