--- a/LiSE/pyproject.toml
+++ b/LiSE/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
 	"networkx>=2.4,<2.8",
 	"cached_property>=1.5.2",
 	"sqlalchemy>=1.4,<3",
-	"numpy>=1.19.5,<2"
+	"numpy>=1.19.5,<2",
+	"tblib>=1.7.0,<2"
 ]
 
 [project.urls]
