--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py37,py38,py39,py310
+envlist = py38,py39,py310
 skipsdist = true
 requires =
 	numpy>=1.19.5
