--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,6 @@
 [tox]
 envlist = py38,py39,py310,py311
 skipsdist = true
-requires =
-	Cython
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
@@ -14,4 +12,4 @@ deps =
 	ELiDE/
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    python3 -m pytest
+    python -m pytest
