--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
       - run: |
-          python -m pip install -r test_requirements.txt
-          pytest .
+          python -m pip install -r LiSE/test_requirements.txt
+          pytest LiSE/
