--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
+# content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38,py39,py310,py311,py312
+envlist = py38,py39,py310,py311
 skipsdist = true
 
 [testenv]
-passenv =
-    DISPLAY
-	PYTHONPATH
+# install pytest in the virtualenv where commands will be executed
+passenv = DISPLAY
 deps =
 	pytest
-	-r LiSE/test_requirements.txt
-	kivy
-	pygments
+	LiSE/
+	ELiDE/
 commands =
+    # NOTE: you can run any command line tool here - not just tests
     python -m pytest
