--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ deps =
 	ELiDE/
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    python -m pytest
+    python -m pytest LiSE ELiDE
