--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -7,14 +7,14 @@ include-package-data=true
 
 [project]
 name = "ELiDE"
-version = "0.15.10"
+version = "0.16.0"
 authors = [
 	{ name="Zachary Spector", email="public@zacharyspector.com" },
 ]
 description = "Extensible Life Simulator Engine Development Environment"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.13"
 classifiers = [
 	"Programming Language :: Python :: 3",
 	"License :: OSI Approved :: GNU Affero General Public License v3",
@@ -22,7 +22,7 @@ classifiers = [
 	"Development Status :: 2 - Pre-Alpha"
 ]
 dependencies = [
-	"LiSE>=0.15.5,<0.16.0",
+	"LiSE>=0.16.0,<0.17.0",
 	"kivy>=2.0.0,<3",
 	"kivy-deps.glew ; sys_platform == 'win32'",
 	"kivy-deps.sdl2 ; sys_platform == 'win32'",
