--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 dependencies = [
 	"LiSE>=0.17.0,<0.18.0",
 	"kivy>=2.0.0,<3",
+	"kivy_garden.collider",
 	"kivy-deps.glew ; sys_platform == 'win32'",
 	"kivy-deps.sdl2 ; sys_platform == 'win32'",
 	"pygments>=2.7.4"
