Add "big" marker to ELiDE

--- a/ELiDE/pyproject.toml
+++ b/ELiDE/pyproject.toml
@@ -37,4 +37,5 @@ dependencies = [
 [tool.pytest.ini_options]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+	"big: marks tests as too big to diagnose specific bugs with"
 ]
